--- a/src/features/home/community/community.scss
+++ b/src/features/home/community/community.scss
@@ -3,11 +3,15 @@
     &.column-2 {
       @include media-laptop {
         flex-direction: row;
+        gap: 50px;
       }
+
       @include media-tablet-large {
         flex-direction: column;
+        gap: 0;
       }
     }
+
     & .info {
       @include media-laptop {
         width: 100%;
